# QMIV

./: .gitignore  CMakeLists.txt  README.md  configure_build_and_test.bat  configure_build_and_test.sh
apps/QMIV/: CMakeLists.txt  TargetSources.cmake
apps/QMIV/src/: main_Dispatch.cpp  main_QMIV.cpp  xAppQMIV.cpp  xAppQMIV.h  xMetricQMIV.cpp  xMetricQMIV.h  xUtilsQMIV.cpp  xUtilsQMIV.h
cmake/: MicroarchFeatureLevels.cmake  MicroarchFeatureLevelsARM64.cmake  doctest.cmake  macros.cmake  x86_64_SIMD.cmake
libs/pmbb-base/: CMakeLists.txt  TargetSources.cmake
libs/pmbb-base/src/: xCfgINI.cpp  xCfgINI.h  xCommonDefBASE.h  xCoreInfo.cpp  xCoreInfo.h  xDispatch.h  xDispatchUtils.h  xErrMsg.cpp  xErrMsg.h  xFile.cpp  xFile.h  xLinuxSysfs.cpp  xLinuxSysfs.h  xMemory.cpp  xMemory.h  xMemoryAlign.h  xProcInfo.cpp  xProcInfo.h  xString.cpp  xString.h
libs/pmbb-base/test/: test-base.cpp
libs/pmbb-core/: CMakeLists.txt  TargetSources.cmake
libs/pmbb-core/src/: xColorSpace.h  xColorSpaceAVX.cpp  xColorSpaceAVX512.cpp  xColorSpaceCoeff.cpp  xColorSpaceCoeff.h  xColorSpaceNEON.cpp  xColorSpaceNEON.h  xColorSpaceSSE.cpp  xColorSpaceSTD.cpp  xCommonDefCORE.h  xDistortion.h  xDistortionAVX.cpp  xDistortionAVX.h  xDistortionAVX512.cpp  xDistortionAVX512.h  xDistortionNEON.cpp  xDistortionNEON.h  xDistortionSSE.cpp  xDistortionSSE.h  xDistortionSTD.cpp  xDistortionSTD.h  xEvent.h  xHelpersFLT.h  xHelpersSIMD.h  xKBNS.cpp  xKBNS.h  xMarginOps.h  xMiscUtilsCORE.cpp  xMiscUtilsCORE.h  xPic.cpp  xPic.h  xPicCommon.cpp  xPicCommon.h  xPixelOps.h  xPixelOpsAVX.cpp  xPixelOpsAVX512.cpp  xPixelOpsNEON.cpp  xPixelOpsNEON.h  xPixelOpsSSE.cpp  xPixelOpsSTD.cpp  (+16 more)
libs/pmbb-core/test/: test-core-xColorspace.cpp  test-core-xDistortion.cpp  test-core-xKBNS.cpp  test-core-xPixelOps.cpp  test-core-xThreadPool.cpp  test-xColorspace.cpp  test-xCommon.cpp  test-xDistortion.cpp  test-xKBNS.cpp  test-xMarginOps.cpp  test-xPixelOps.cpp  test-xThreadPool.cpp
libs/pmbb-ivqm/: CMakeLists.txt  TargetSources.cmake
libs/pmbb-ivqm/src/: xCommonDefIVQM.h  xCorrespPixelShift.h  xCorrespPixelShiftNEON.cpp  xCorrespPixelShiftNEON.h  xCorrespPixelShiftPrms.h  xCorrespPixelShiftSSE.cpp  xCorrespPixelShiftSSE.h  xCorrespPixelShiftSTD.cpp  xCorrespPixelShiftSTD.h  xGlobClrDiff.cpp  xGlobClrDiff.h  xIVPSNR.cpp  xIVPSNR.h  xIVSSIM.cpp  xIVSSIM.h  xPSNR.cpp  xPSNR.h  xPVD.cpp  xPVD.h  xSSIM.cpp  xSSIM.h  xShftCompPic.cpp  xShftCompPic.h  xStructSim.h  xStructSimAVX.cpp  xStructSimAVX.h  xStructSimAVX512.cpp  xStructSimAVX512.h  xStructSimConsts.h  xStructSimNEON.cpp  xStructSimNEON.h  xStructSimSSE.cpp  xStructSimSSE.h  xStructSimSTD.cpp  xStructSimSTD.h  xTestUtilsIVQM.cpp  xTestUtilsIVQM.h  xWSPSNR.cpp  xWeightedSpherically.cpp
libs/pmbb-ivqm/test/: test-ivqm-xSSIM.cpp  test-ivqm-xStructSim.cpp  test-xCorrespPixelShift.cpp  test-xGlobClrDiff.cpp  test-xStructSim.cpp
libs/pmbb-slst/: CMakeLists.txt
libs/pmbb-slst/src/: xSeqLST.cpp  xSeqLST.h
libs/pmbb-spng/src/: xSeqPNG.cpp
